--- a/OrderControl/App.xaml
+++ b/OrderControl/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="OrderControl.App"
+﻿<Application x:Class="PointOfSale.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:OrderControl"
+             xmlns:local="clr-namespace:PointOfSale"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
